[package]
name = "grafton-server"
version = "0.1.0"
edition = "2021"
authors = ["Grant Sparks <grant@grafton.ai>"]
description = "The Grafton Machine Shed API Server, written in Rust, serves multiple APIs, protocols, and services. It aims to provide a robust, efficient, and flexible platform for hosting a variety of internet-collaborating applications particularly with AI Agents and LLMs."
homepage = "https://www.grafton.ai"
repository = "https://github.com/GrantSparks/grafton"
license = "Apache-2.0"
keywords = ["api", "web", "http", "server", "networking", "ai"]
categories = ["network-programming", "web-programming"]
include = [
    "config/default.toml",
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]
publish = false

[features]
default = ["grpc", "rbac", "graphql"]
grpc = ["tonic"]
graphql = []
rbac = ["oso"]

[dependencies]
anyhow = { version = "*" }
lazy_static = { version = "*" }
regex = { version = "*" }
serde_json = { version = "*" }
tracing = "*"
tracing-appender = "*"
tracing-subscriber = "*"
url = { version = "*" }
figment = { version = "*", features = ["env", "toml"] }
serde = { version = "*", features = ["derive"] }
axum-login = "0.7"

[dependencies.oso]
version = "*"
features = ["uuid-10"]
optional = true

[dependencies.tokio]
version = "*"
features = ["signal", "rt-multi-thread"]

[dependencies.tonic]
version = "*"
features = ["transport", "tls"]
optional = true
