[package]
authors = ["Grant Sparks <grant@grafton.ai>"]
categories = ["network-programming", "web-programming"]
description = "The Grafton Machine Shed API Server, written in Rust, serves multiple APIs, protocols, and services. It aims to provide a robust, efficient, and flexible platform for hosting a variety of internet-collaborating applications particularly with AI Agents and LLMs."
edition = "2021"
homepage = "https://www.grafton.ai"
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "config/default.toml",
    "config/policies.polar",
    "src/**/*",
]
keywords = ["api", "web", "http", "server", "networking", "ai"]
license = "Apache-2.0"
name = "grafton-server"
publish = false
repository = "https://github.com/GrantSparks/grafton"
version = "0.1.0"

[features]
default = ["grpc", "rbac", "graphql"]
graphql = []
grpc = ["tonic"]
rbac = ["oso"]

[dependencies]
anyhow = "*"
axum-login = "*"
lazy_static = "*"
regex = "*"
serde_json = "*"
tracing = "*"
tracing-appender = "*"
tracing-subscriber = "*"
url = "*"

[dependencies.figment]
features = ["env", "toml"]
version = "*"

[dependencies.oso]
features = ["uuid-10"]
optional = true
version = "*"

[dependencies.serde]
features = ["derive"]
version = "*"

[dependencies.tokio]
features = ["signal", "rt-multi-thread"]
version = "*"

[dependencies.tonic]
features = ["transport", "tls"]
optional = true
version = "*"
