[package]
authors = ["Grant Sparks <grant@grafton.ai>"]
categories = ["network-programming", "web-programming"]
description = "The Grafton Machine Shed API Server, written in Rust, serves multiple APIs, protocols, and services. It aims to provide a robust, efficient, and flexible platform for hosting a variety of internet-collaborating applications particularly with AI Agents and LLMs."
edition = "2021"
homepage = "https://www.grafton.ai"
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "build.rs",
    "src/**/*",
    "migrations/**/*",
    "templates/**/*",
]
keywords = ["api", "web", "http", "server", "networking", "ai"]
license = "Apache-2.0"
name = "grafton-server"
publish = false
repository = "https://github.com/GrantSparks/grafton"
version = "0.1.0"

[profile.dev.build-override]
opt-level = 3

[features]
default = ["rbac", "graphql"]
graphql = []
grpc = ["tonic"]
rbac = ["oso"]

[dev-dependencies]
tempfile = "3"
toml = "*"
fs = "*"

[dependencies]
rustls-pemfile = "1"
anyhow = "1"
lazy_static = "1"
oauth2 = "4"
regex = "1"
rustls = "*"
serde_json = "1"
thiserror = "1"
time = "*"
tracing = "*"
tracing-appender = "*"
tracing-subscriber = "*"
url = "2"
askama_axum = "*"
derivative = "2"

[dependencies.askama]
features = ["with-axum"]
version = "*"

[dependencies.axum]
features = ["macros"] # Hack to enable macros in axum-login crate dependency

[dependencies.axum-login]
version = "*"

[dependencies.reqwest]
features = ["json"]
version = "*"

[dependencies.figment]
features = ["env", "toml"]
version = "*"

[dependencies.hyper]
features = ["http1", "http2", "server"]
version = "1"

[dependencies.hyper-util]
version = "*"
features = ["tokio", "server-auto"]

[dependencies.oso]
features = ["uuid-10"]
optional = true
version = "*"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.sqlx]
features = ["sqlite", "time", "runtime-tokio"]
version = "*"

[dependencies.strum]
features = ["derive"]
version = "*"

[dependencies.tls-listener]
features = ["rustls", "hyper-h1", "hyper-h2"]
version = "*"

[dependencies.tokio]
features = ["signal", "rt-multi-thread"]
version = "1"

[dependencies.tonic]
features = ["transport", "tls"]
optional = true
version = "*"

[dependencies.tower]
features = ["util"]
version = "*"
