[package]
name = "chatgpt-plugin"
version = "0.1.0"
edition = "2021"
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "config/default.toml",
    "config/policies.polar",
    "src/**/*",
]

[dependencies]
axum-yaml = "*"
indexmap = "2"
openapiv3 = "*"

[dependencies.axum]
features = ["macros"] # Hack to enable macros in axum-login crate dependency

[dependencies.tokio]
features = ["full"]
version = "1"

[dependencies.grafton-server]
path = "../../grafton-server"
