[package]
name = "chatgpt-plugin"
version = "0.1.0"
edition = "2021"
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "config/default.toml",
    "config/policies.polar",
    "src/**/*",
]

[dependencies]
axum-yaml = "*"
derivative = "2"
indexmap = "2"
openapiv3 = "*"
grafton-config = "*"

[dependencies.serde]
version = "1"

[dependencies.tokio]
features = ["full"]
version = "1"

[dependencies.grafton-server]
path = "../../../grafton-server"

[dependencies.grafton-auth]
path = "../../grafton-auth"
